tina-web/src/components/AppShell.module.scss
@use '../styles/tokens' as *;

.appShell {
  display: grid;
  grid-template-columns: $sidebar-width 1fr;
  grid-template-rows: $header-height 1fr $footer-height;
  grid-template-areas:
    "header header"
    "sidebar main"
    "footer footer";
  height: 100vh;
  width: 100vw;
  overflow: hidden;
}

.noSidebar {
  grid-template-columns: 1fr;
  grid-template-areas:
    "header"
    "main"
    "footer";
}

.header {
  grid-area: header;
}

.sidebar {
  grid-area: sidebar;
  width: $sidebar-width;
  transition: width 0.2s ease-in-out;
  overflow: hidden;
  border-right: 1px solid $border-color;
  background: $bg-sidebar;
}

.main {
  grid-area: main;
  overflow: auto;
  min-width: 0;
}

.footer {
  grid-area: footer;
}

